Archive/a917e82011fd7fe4e4c4f528546de79b-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:16:33: error: expected parameter pack before '...'
 void ForwardToTits ( std::tuple<...Ts> t ) {
                                 ^
main.cpp:16:38: error: template argument 1 is invalid
 void ForwardToTits ( std::tuple<...Ts> t ) {
                                      ^
main.cpp: In function 'int main(int, char**)':
main.cpp:31:19: error: no matching function for call to 'ForwardToTits(std::tuple<int, int, int>&)'
  ForwardToTits( t );
                   ^
main.cpp:31:19: note: candidate is:
main.cpp:16:6: note: template<class ... Ts> void ForwardToTits(int)
 void ForwardToTits ( std::tuple<...Ts> t ) {
      ^
main.cpp:16:6: note:   template argument deduction/substitution failed:
main.cpp:31:19: note:   cannot convert 't' (type 'std::tuple<int, int, int>') to type 'int'
  ForwardToTits( t );
                   ^
